Update deps for Java 21